Add Kedro telemetry configuration to pyproject.toml

--- a/monopoly/pyproject.toml
+++ b/monopoly/pyproject.toml
@@ -84,3 +84,6 @@ select = [
     "T201", # Print Statement
 ]
 ignore = ["E501"]  # Ruff format takes care of line-too-long
+
+[tool.kedro_telemetry]
+project_id = "05e83f3065074e258347948f444b292c"
